--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - ./backend/:/usr/src/app/
+      - .:/backend/
+      - .:/db.sqlite3
     expose:
       - "8000"
     env_file:
