--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,13 +3,13 @@ version: '3.9'
 services:
   web:
     container_name: backend
-    restart: unless-stopped
+    restart: always
     build: ./backend
-    command: python manage.py runserver 0.0.0.0:8000
+    command: /start.sh
     volumes:
       - ./backend/:/usr/src/app/
-      - .:/backend/
-      - .:/db.sqlite3
+    #      - .:/backend/
+    #      - .:/db.sqlite3
     ports:
       - "8000:8000"
     env_file:
@@ -19,28 +19,27 @@ services:
 
   celery:
     build: ./backend
-    command: celery -A backend worker -l info
+    command: /start-celeryworker.sh
     volumes:
       - ./backend/:/usr/src/app
     env_file:
       - ./backend/backend/.env
     depends_on:
       - web
-      - redis
 
   celery-beat:
     build: ./backend
-    command: celery -A backend beat -l info
+    command: /start-celerybeat.sh
     volumes:
       - ./backend/:/usr/src/app/
     env_file:
       - ./backend/backend/.env
     depends_on:
-      - redis
+      - web
 
   flower:
     build: ./backend
-    command: celery -A backend flower
+    command: /start-flower.sh
     ports:
       - "5555:5555"
     volumes:
@@ -48,7 +47,6 @@ services:
     env_file:
       - ./backend/backend/.env
     depends_on:
-      - redis
       - celery
       - celery-beat
 
