--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   web:
     container_name: backend
-    restart: always
+    restart: unless-stopped
     build: ./backend
     command: /start.sh
     volumes:
@@ -47,26 +47,31 @@ services:
   celery:
     build: ./backend
     command: /start-celeryworker.sh
+    restart: unless-stopped
     volumes:
       - ./backend/:/usr/src/app
     env_file:
       - .env
     depends_on:
+      - redis
       - web
 
   celery-beat:
     build: ./backend
     command: /start-celerybeat.sh
+    restart: unless-stopped
     volumes:
       - ./backend/:/usr/src/app/
     env_file:
       - .env
     depends_on:
+      - redis
       - web
 
   flower:
     build: ./backend
     command: /start-flower.sh
+    restart: unless-stopped
     ports:
       - "5555:5555"
     volumes:
@@ -74,6 +79,7 @@ services:
     env_file:
       - .env
     depends_on:
+      - redis
       - celery
       - celery-beat
 
