trying to fix port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     build: ./
     command: /start.sh
-    expose:
+    ports:
       - "8000:8000"
     env_file:
       - .env
