--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,8 +9,8 @@ services:
     volumes:
       - ./:/usr/src/app/
       - .:/db.sqlite3
-    expose:
-      - "8000"
+    ports:
+      - "8000:8000"
     env_file:
       - ./backend/.env
     depends_on:
@@ -25,6 +25,7 @@ services:
       - ./backend/.env
     depends_on:
       - web
+      - redis
 
   celery-beat:
     build: ./
@@ -35,6 +36,8 @@ services:
       - ./backend/.env
     depends_on:
       - web
+      - celery
+      - redis
 
   flower:
     build: ./
