--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,81 @@
+amqp==5.2.0
+asgiref==3.7.2
+async-timeout==4.0.3
+autopep8==2.0.4
+billiard==4.2.0
+bleach==5.0.1
+boto3==1.26.45
+botocore==1.29.45
+certifi==2023.11.17
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+cryptography==41.0.7
+Deprecated==1.2.14
+deprecation==2.1.0
+django-colorfield==0.11.0
+django-cors-headers==3.14.0
+django-ebhealthcheck==2.0.2
+django-environ==0.11.2
+django-extensions==3.2.3
+django-model-utils==4.3.1
+django-ses==3.5.2
+django-stdimage==6.0.2
+django-storages==1.14.2
+djangorestframework-camel-case==1.4.2
+docutils==0.20.1
+drf-api-logger==1.1.15
+drf-nested-routers==0.93.5
+ecdsa==0.18.0
+et-xmlfile==1.1.0
+flower==1.2.0
+geographiclib==2.0
+gunicorn==21.2.0
+humanize==4.9.0
+idna==3.6
+jmespath==1.0.1
+josepy==1.14.0
+jsonfield==3.1.0
+kombu==5.3.4
+marshmallow==3.20.2
+marshmallow-enum==1.5.1
+mozilla-django-oidc==3.0.0
+mypy-extensions==0.4.3
+packaging==23.2
+Pillow==10.2.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.43
+psycopg2-binary==2.9.9
+pyasn1==0.5.1
+pycodestyle==2.11.1
+pycparser==2.21
+pyOpenSSL==23.3.0
+pyparsing==3.1.1
+python-jose==3.3.0
+python-keycloak==2.9.0
+redis==5.0.1
+requests==2.31.0
+requests-toolbelt==1.0.0
+rsa==4.9
+s3transfer==0.6.0
+six==1.16.0
+sqlparse==0.4.4
+swapper==1.3.0
+tornado==6.4
+typing-inspect==0.9.0
+typing_extensions==4.4.0
+tzdata==2022.7
+urllib3==2.1.0
+utm==0.7.0
+vine==5.1.0
+wcwidth==0.2.13
+webencodings==0.5.1
+wrapt==1.16.0
 celery==5.3.6
 Django==4.1.13
 django-filter==23.5
